2010-05-29  Oliver Hader  <oliver@typo3.org>

	* Fixed bug #14488: prioriCalc no longer working correctly (thanks to Franz Koch)

2010-05-29  Susanne Moog  <typo3@susanne-moog.de>

	* Follow-up to feature #14490: wrong position of stop page tree icon & cursor:pointer for IE6 icons
	* Follow-up to feature #14506: Fixes for alt_db_navframe (page tree filter - missing JS file) (Thanks to Steffen Gebert)

2010-05-28  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug #11503: HTML5 doctype implementation
	* Follow-up to feature #14506: Fixes for alt_db_navframe (page tree filter) (Thanks to Steffen Gebert)
	* Follow-up to feature #14490: forgotten css file
	* Follow-up to feature #14490: A new skin for the TYPO3 Backend (Thanks to Steffen Gebert and Lars Zimmermann)
	* Fixed bug #14506: Fixes for alt_db_navframe (page tree filter) (Thanks to Steffen Gebert)
	* Fixed bug #14462: Remove old_backend

2010-05-28  Oliver Hader  <oliver@typo3.org>

	* Fixed bug #14503: HTML is shown in sysext belog after the usage of the sprite api for icons (thanks to Andy Grunwald)
	* Follow-up to feature #14490: Fatal error in typo3/sysext/cms/layout/class.tx_cms_layout.php

2010-05-28 Francois Suter  <francois@typo3.org>

	* Fixed bug: #13315: Scheduler: Failed status hides other statuses

2010-05-28  Tobias Liebig  <mail_typo3@etobi.de>

	* Follow-up to bug #3800: change the label names (warning about empty reference index table) (thanks to Michael Knabe)
	* Fixed bug #13903: wrong links with multiple domain records on one page with typolinkCheckRootline (thanks to Irene Höppner)
	* Fixed bug #14499: saving in t3editor per ajax call not possible (follow-up to #14465 new Sprite API)

2010-05-28  Susanne Moog  <typo3@susanne-moog.de>

	* Follow-up to bug #14465: Make use of the new Sprite API throughout the TYPO3 Core Backend
	* Fixed bug #1402: Text area / RTE fields can't be set to required at the moment.