@@ -1,3 +1,7 @@
+2010-05-29  Steffen Kamper  <info@sk-typo3.de>
+
+	* Fixed bug 14523: Missing icons in workspace modules
+
 2010-05-29  Oliver Hader  <oliver@typo3.org>
 
 	* Fixed bug #14488: prioriCalc no longer working correctly (thanks to Franz Koch)
